Minor project name change

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Bikewatching</title>
   </head>
   <body>
-    <h1>🚴🏼‍♀️ Bikewatching</h1>
-    <h2>Explore Bike Traffic in Boston, MA, USA</h2>
+    <h1>🚴🏼‍♀️ Bikewatching: <span class="subtitle">Explore Bike Traffic in Boston, MA</span></h1>
   </body>
 </html>
