Minor update to project title

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Bikewatching</title>
   </head>
   <body>
-    <h1>🚴🏼‍♀️ Bikewatching: <span class="subtitle">Explore Bike Traffic in Boston, MA</span></h1>
+    <h1>🚴🏼‍♀️ Bikewatching: <span class="subtitle">Explore Bike Traffic in Boston, MA, USA</span></h1>
   </body>
 </html>
