--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="global.css" />
-    <link rel="icon" href="assets/favicon.svg" type="image/svg+xml" />
+    <script src="map.js" type="module"></script>
+
     <title>Bikewatching</title>
+
+    <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="map.css" />
+    <link rel="icon" href="assets/favicon.svg" type="image/svg+xml" />
+    <!-- Mapbox GL JS CSS -->
+    <link
+    href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css"
+    rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>🚴🏼‍♀️ Bikewatching: <span class="subtitle">Explore Bike Traffic in Boston, MA, USA</span></h1>
+    <h1>🚴🏼‍♀️ Bikewatching: Explore Bike Traffic in Boston, MA, USA</h1>
+    <div id="map"></div>
   </body>
 </html>
