--- a/index.html
+++ b/index.html
@@ -7,17 +7,28 @@
 
     <title>Bikewatching</title>
 
+    <!-- Mapbox GL JS CSS -->
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="global.css" />
     <link rel="stylesheet" href="map.css" />
     <link rel="icon" href="assets/favicon.svg" type="image/svg+xml" />
-    <!-- Mapbox GL JS CSS -->
-    <link
-    href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css"
-    rel="stylesheet"
-    />
   </head>
   <body>
     <h1>🚴🏼‍♀️ Bikewatching: Explore Bike Traffic in Boston, MA, USA</h1>
-    <div id="map"></div>
+    <header>
+      <label for="time-slider">
+        FILTER BY TIME:
+        <input id="time-slider" type="range" min="-1" max="1440" value="-1">
+        <p id="any-time">(ANY TIME)</p>
+        <time id="selected-time"></time>
+      </label>
+    </header>
+    <div id="map">
+      <svg></svg>
+    </div>
+    <div id="tooltip" style="position:absolute;pointer-events:none;opacity:0"></div>
   </body>
 </html>
